tests/data/checker_var_re_asset/bad/array.php
<?php

$dims[] = $left !== "auto" ? $left : 0;
$dims[] = $right !== "auto" ? $right : 0;

$dims = $r;